k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: r16a-cloud
  namespace: r16a-cloud
spec:
  type: ClusterIP
  selector:
    app: r16a-cloud
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
